# tschrou

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  NOTES.md  README.md
py/: test.py
py/results/: result.json
results/: result-1774009388919149854.json  result-1774012356342070925.json  result-1774014862597681028.json  result-1774015589368916718.json  result-1776677437409690304.json  result-1776678943426206015.json  result-1776682668166487610.json  result-1776955237764265630.json  result-1777045858910917715.json  result-1777048996550004000.json  result-1777057535460634745.json  result-1777058173521010963.json  result-1777058418126490349.json  result-1777061988857573970.json  result.json
results/historical/: result-1774013726865183299.json  result-1774015274862666705.json  result-1774017668692183910.json  result-1774019943979633999.json  result-1774021200416409061.json  result-1776942353979690982.json  result-1776957253406095162.json  result-1776957917303760823.json  result-1776960218861963590.json  result-1776962668290153009.json  result-1776962708283749974.json  result-1776963313936144008.json  result-1777020137704958513.json  result-1777022766194215407.json  result-1777024994877371357.json  result-1777025329618689300.json  result-1777027272048204578.json  result-1777028930870878022.json  result-1777031699447380456.json  result-1777033055601680624.json  result-1777035395944894228.json  result-1777037287579276281.json  result-1777039144952899145.json  result-1777039572984692932.json  result-1777039742697550623.json  result-1777040644354058192.json  result-1777042677714684761.json
src/: main.cc  main.cpp
src/net/: tcp_client.cc  tcp_client.h  tcp_server.cc  tcp_server.h
src/node/: fingertable.cc  fingertable.h  node.cc  (+3 more)
(+14 files in other folders)
